--- a/Pages/AddItem.cshtml
+++ b/Pages/AddItem.cshtml
@@ -289,7 +289,7 @@
                             </div> *@
 
                             <div class="mb-4" id="expiryDate">
-                                <label for="ExpiryDate">Expiry Date</label>
+                                <label for="ExpiryDate">@Model.lblExpiry</label>
                                 <input asp-for="ExpiryDate" class="form-control" type="date" name="ExpiryDate"
                                     value="@Model.ExpiryDate.ToString("yyyy-MM-dd")" />
                             </div>
