--- a/Pages/AddSupplier.cshtml
+++ b/Pages/AddSupplier.cshtml
@@ -92,8 +92,8 @@
                                 <label>@Model.lblSupplierType</label>
                                 <select class="form-select" aria-label="Supplier Type" id="SupplierType" name="SupplierType">
                                     <option selected disabled>@Model.lblSupplierType</option>
-                                    <option value="Internal">Internal</option>
-                                    <option value="External">External</option>
+                                    <option value="Internal">@Model.lblInternal</option>
+                                    <option value="External">@Model.lblInternal</option>
                                 </select>
                             </div>
 
