--- a/Pages/EditSupplier.cshtml
+++ b/Pages/EditSupplier.cshtml
@@ -88,8 +88,8 @@
 
                             <label>@Model.lblSupplierType</label>
                                 <select class="form-select" asp-for="SupplierType">
-                                <option value="Internal" >Internal</option>
-                                <option value="External" >External</option>
+                                <option value="Internal" >@Model.lblInternal</option>
+                                <option value="External" >@Model.lblExternal</option>
                             </select>
                         </div>
                         <div class="col-lg-12 col-sm-12">
