--- a/Pages/HazardTypes/Delete.cshtml
+++ b/Pages/HazardTypes/Delete.cshtml
@@ -5,23 +5,23 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@Model.lblDelete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@Model.lblAreYouSure</h3>
 <div>
     <div class="row">
         <div class="col-md-4">
             <div class="card border-0 shadow mb-4">
                 <div class="card-body">
-                    <h4>HazardType</h4>
+                    <h4>@Model.lblHazardType</h4>
                     <hr />
                     <dl class="row">
                     </dl>
 
                     <form method="post">
                         <input readonly asp-for="HazardType.HazardTypeName" />
-                        <input type="submit" value="Delete" class="btn btn-danger" /> |
-                        <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+                        <input type="submit" value="@Model.lblDelete" class="btn btn-danger" /> |
+                        <a asp-page="./Index" class="btn btn-secondary">@Model.lblBack</a>
                     </form>
                 </div>
             </div>
