--- a/Pages/ItemCards.cshtml
+++ b/Pages/ItemCards.cshtml
@@ -44,15 +44,15 @@
                     var item = Model.ItemCardsFromReport[i];
 
                     <div class="card mb-4 p-3 ">
-                        <h4>Item @(i + 1)</h4>
+                        <h4>@Model.lblItem @(i + 1)</h4>
                          <input asp-for="@Model.ItemCardsFromReport[i].ItemId" class="form-control" hidden />
                         <div class="d-flex justify-content-between">
                             <div class="form-group w-23">
-                                <label>Item Group</label>
+                                <label>@Model.lblItemGroup</label>
                                 <input asp-for="@Model.ItemCardsFromReport[i].GroupCode" class="form-control" readonly />
                             </div>
                             <div class="form-group w-23">
-                                <label>Item Code</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                <label>@Model.lblItemCode</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                 <input asp-for="@Model.ItemCardsFromReport[i].ItemCode" class="form-control" readonly />
                             </div>
                             @{
@@ -61,12 +61,12 @@
                             }
                             
                             <div class="form-group w-23">
-                                <label>Item Name(Arabic)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                <label>@Model.lblItemNameArabic</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                 @* <input asp-for="@Model.ItemCardsFromReport[i].ItemName" class="form-control" readonly /> *@
                                  <input value="@arabicName" class="form-control" readonly />
                             </div>
                             <div class="form-group w-23">
-                                <label>Item Name(English)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                <label>@Model.lblItemNameEng</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                 <input asp-for="@Model.ItemCardsFromReport[i].ItemName" class="form-control" readonly />
                             </div>
                             @* <div class="form-group w-23">
@@ -80,7 +80,7 @@
                         
 
                         <div class="form-group">
-                            <label>Description</label>
+                            <label>@Model.lblItemDescription</label>
                             <textarea asp-for="@Model.ItemCardsFromReport[i].ItemDescription" class="form-control" disabled></textarea>
                         </div>
                         
@@ -89,21 +89,21 @@
                         
 
                             <div class="form-group w-23">
-                                <label>Unit of Measure</label>
+                                <label>@Model.lblUnitOfMeasure</label>
                                 <input asp-for="@Model.ItemCardsFromReport[i].UnitOfmeasure" class="form-control" readonly />
                             </div>
 
                             <div class="form-group w-23">
-                                <label>Chemical</label>
+                                <label>@Model.lblChemical</label>
                                 <input asp-for="@Model.ItemCardsFromReport[i].Chemical" class="form-control" readonly />
                             </div>
 
                             <div class="form-group w-23">
-                                <label>Risk Rating</label>
+                                <label>@Model.lblRiskRating</label>
                                 <input asp-for="@Model.ItemCardsFromReport[i].HazardTypeName" class="form-control" />
                             </div>
                             <div class="form-group w-23">
-                                <label>Expiry Date</label>
+                                <label>@Model.lblExpiry</label>
                                 <input type="date" asp-for="@Model.ItemCardsFromReport[i].ExpiryDate" class="form-control"  />
                             </div>
                         </div>
@@ -115,9 +115,9 @@
                             <div class="form-group w-23">
                             <label asp-for="@Model.ItemCardsFromReport[i].TypeOfAsset"></label>
                                 <select asp-for="@Model.ItemCardsFromReport[i].TypeOfAsset" class="form-control">
-                                    <option value="">Select asset type</option>
-                                    <option value="Sustainable">Sustainable</option>
-                                    <option value="Consumable">Consumable</option>
+                                    <option value="">@Model.lblSelectAssetType</option>
+                                    <option value="Sustainable">@Model.lblSustainable</option>
+                                    <option value="Consumable">@Model.lblConsumable</option>
 
                                 </select>
                             </div>
@@ -130,7 +130,7 @@
                             </div>
 
                             <div class="form-group w-23">
-                                <label asp-for="@Model.ItemCardsFromReport[i].ReorderLimit">Reorder Limit</label>
+                                <label asp-for="@Model.ItemCardsFromReport[i].ReorderLimit">@Model.lblReorderLimit</label>
                                 <input asp-for="@Model.ItemCardsFromReport[i].ReorderLimit"
                                     class="form-control reorder-limit-input"
                                     type="number"
@@ -138,7 +138,7 @@
                             </div>
 
                             <div class="form-group w-23">
-                                <label>Ceiling</label>
+                                <label>@Model.lblCeiling</label>
                                 <input class="form-control ceiling-output"
                                     type="number"
                                     readonly
@@ -149,7 +149,7 @@
                         <div class="d-flex gap-4">
                         
                             <div class="form-group w-23">
-                                <label asp-for="@Model.ItemCardsFromReport[i].QuantityReceived">Quantity Received</label>
+                                <label asp-for="@Model.ItemCardsFromReport[i].QuantityReceived">@Model.lblQuantityReceived</label>
                                 <input asp-for="@Model.ItemCardsFromReport[i].QuantityReceived" class="form-control" type="number" readonly/>
                                 <span asp-validation-for="@Model.ItemCardsFromReport[i].QuantityReceived" class="text-danger"></span>
                             </div>
@@ -160,7 +160,7 @@
 
                 <div class="d-flex justify-content-between">
                     <div class="form-group" style="width: 48%;">
-                        <label asp-for="ItemCard.StoreId" class="control-label">Warehouse Name</label>
+                        <label asp-for="ItemCard.StoreId" class="control-label">@Model.lblStoreName</label>
                         @* <input type="text" asp-for="ItemCard.StoreId" class="form-control"/> *@
                         @* <select asp-for="ItemCard.StoreId" id="storeSelect" name="StoreId" class="form-control" asp-items="ViewBag.WarehouseId" readonly></select> *@
                         <select asp-for="ItemCard.StoreId" id="storeSelect" class="form-control"
@@ -179,7 +179,7 @@
                     <div class="form-group" style="width:31%;">
                         <label asp-for="ItemCardBatch.RoomId"></label>
                         <select asp-for="ItemCardBatch.RoomId" class="form-control" asp-items="ViewBag.RoomId" name="RoomId" id="RoomId"  onchange="filterShelfByRoom()">
-                            <option value="">Select Room</option>
+                            <option value="">@Model.lblSelectRoom</option>
 
                         </select>
                     </div>
@@ -187,7 +187,7 @@
                     <div class="form-group" style="width:31%;">
                         <label asp-for="ItemCardBatch.ShelfId"></label>
                         <select asp-for="ItemCardBatch.ShelfId" name="ShelfId" id="ShelfId" class="form-control" asp-items="ViewBag.ShelfId">
-                            <option value="">Select Shelf</option>
+                            <option value="">@Model.lblSelectShelf</option>
 
                         </select>
                     </div>
@@ -219,11 +219,17 @@
                             <label asp-for="ItemCardBatch.DocumentType"></label>
                             @* <select asp-for="ItemCardBatch.DocumentType" name="DocumentType" id="DocumentType" class="form-control"  asp-items="ViewBag.D" /> *@
                             <select asp-for="ItemCardBatch.DocumentType" class="form-select" id="DocumentType" name="DocumentType" >
-                                <option value="">Select Based On document</option>
-                                <option value="Certification">Certification</option>
+                                <option value="">@Model.lblSelectBasedOndocument</option>
+                                @* <option value="Certification">Certification</option>
                                 <option value="Purchase order">Purchase order</option>
                                 <option value="Return order">Return order</option>
-                                <option value="Transfer from another warehouse">Transfer from another warehouse</option>
+                                <option value="Transfer from another warehouse">Transfer from another warehouse</option> *@
+                                @if(Model.DocumentList != null){
+                                    @foreach (var document in Model.DocumentList)
+                                    {
+                                        <option value="@document.DocType">@document.DocType</option>
+                                    }
+                                }
 
                             </select>
                         </div> 
@@ -238,8 +244,8 @@
 
                 </div>
 
-                <button type="submit" class="btn btn-primary">Create</button>
-                <a asp-page="./Requests" class="btn btn-secondary">Cancel</a>
+                <button type="submit" class="btn btn-primary">@Model.lblCreate</button>
+                <a asp-page="./Requests" class="btn btn-secondary">@Model.lblCancel</a>
             </form>
          
         </div>
